client/src/app/sales/sales.less
.btn {
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;

  .icon-sign-blank {
    opacity:0.0;
  }

  .icon-thumbs-down {
    color: red;
  }

  .icon-thumbs-up {
    color: green;
  }

  .icon-thumbs-down.icon-rotate-270 {
    color: yellow;
  }

}

